syntax = "proto3";
option go_package = "github.com/rancher/opni/pkg/metrics/collector";

import "google/protobuf/empty.proto";
import "github.com/prometheus/client_model/io/prometheus/client/metrics.proto";
import "github.com/rancher/opni/pkg/metrics/desc/desc.proto";

package collector;

service RemoteCollector {
  rpc Describe(google.protobuf.Empty) returns (DescriptorList);
  rpc Collect(google.protobuf.Empty) returns (MetricList);
}

message DescriptorList {
  repeated desc.Desc descriptors = 1;
}

message MetricList {
  repeated Metric metrics = 1;
}

message Metric {
  desc.Desc desc = 1;
  io.prometheus.client.Metric metric = 2;
}